<?xml version="1.0" encoding="utf-8"?>

<!-- Wrapping the layout into /layout to make it available with data binding. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Data to make available to the XML via data binding. In this case,
     the whole ViewModel, so that we can access the LiveData,
     click handlers, and state variables. -->
    <data>

        <variable
            name="gratitudeDetailViewModel"
            type="com.example.android.sossego.ui.gratitude.detail.GratitudeDetailViewModel" />
    </data>

    <!-- Start of the visible fragment layout using ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.GratitudeDetailFragment">

        <!--            app:gratitudeListCreatedDate="@{gratitudeDetailViewModel.gratitudeList}"-->

        <TextView
            android:id="@+id/detail_creation_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Friday May-05-2021 15:45" />


        <!--        2-way binding has @=-->
        <EditText
            android:id="@+id/new_gratitude_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:hint="@string/new_gratitude_item_hint"
            android:inputType="text"
            android:text="@={gratitudeDetailViewModel.newGratitudeItemText}"
            app:layout_constraintEnd_toStartOf="@+id/add_item_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_creation_date" />

        <Button
            android:id="@+id/add_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            android:onClick="@{() -> gratitudeDetailViewModel.addNewItem()}"
            android:text="Add"
            app:layout_constraintBottom_toTopOf="@+id/gratitude_detail_recycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_creation_date" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gratitude_detail_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/gratitude_detail_clear_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_gratitude_item" />

        <Button
            android:id="@+id/gratitude_detail_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/clear_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/gratitude_detail_delete_btn"
            app:layout_constraintEnd_toStartOf="@+id/gratitude_detail_delete_btn"
            app:layout_constraintHorizontal_bias="0.5"
            android:onClick="@{() -> gratitudeDetailViewModel.clearGratitudeList()}"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/gratitude_detail_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="@{() -> gratitudeDetailViewModel.deleteGratitudeList()}"
            android:text="@string/delete_button_text"
            app:backgroundTint="@color/dangerRed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/gratitude_detail_clear_button"
            app:layout_constraintTop_toBottomOf="@+id/gratitude_detail_recycler" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>